fixing sources bug where their click-area was way too big

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -1483,6 +1483,7 @@ a.source {
   color: @smallGreyLinkColor; 
   display: block;
   margin-bottom: 4px;
+  width: max-content;
 }
 
 .source:hover, a.source:hover {
@@ -2808,7 +2809,7 @@ body  {
 }
 
 .historyDivision {
-  width: 75%;
+  width: 50%;
   height: 3px;
   margin-top: 72px;
   margin-bottom: 32px;
